# pinfinity

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-certs.yaml  docker-compose.yaml  entrypoint.sh  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  test.yml
app/: main.py
app/default-data/: advance-info.json  advance-list-metadata.json  advance-list.json  base-conf.json  basic-info.json  basic-list-metadata.json  basic-list.json  basic-skillLevel.json  config-country.json  device-list.json  node-appUpdate.json  node-carousel-list.json  node-newsArticles-list.json  node-notifications.json  node-settings-values.json  node-sports-fields.json  node-subscriptions-checkSubscriptionStatus.json  tutorial-filters.json  tutorial-list.json  tutorial-myTraining.json  user-info.json
app/routers/: advance.py  base.py  basic.py  config.py  device.py  download.py  log.py  node.py  tutorial.py  user.py  utils.py
docs/: bluetooth_protocol.md  deployment.md  simulator.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js  bluetooth.js  i18n.js
frontend/js/__tests__/: api.test.js  app.test.js  bluetooth.test.js
frontend/locales/: de.js  en.js
simulator/: README.md  requirements.txt  robot_simulator.py  start.sh
tests/: conftest.py  test_advance.py  test_advance_edge_cases.py  test_basic.py  test_basic_edge_cases.py  test_download.py  test_log.py  test_static.py  test_utils.py
