[project]
name = "pinfinity"
version = "1.0.0"
description = "pinfinity"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coffy>=0.2.1",
    "fastapi[standard]>=0.112.1",
    "uvicorn>=0.30.6",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
